# compute-pcrs

./: .gitignore  Cargo.toml  Containerfile  README.md  REUSE.toml  compute-pcr4  compute-pcr7  justfile
.github/: Containerfile.buildroot
.github/workflows/: rust.yml  tests.yml
cli/: Cargo.toml
cli/src/: main.rs
lib/: Cargo.toml
lib/src/: certs.rs  esp.rs  lib.rs  linux.rs  mok.rs  pcrs.rs  pefile.rs  rootfs.rs  shim.rs  tpmevents.rs  uefi.rs
lib/src/pcrs/: tests.rs
lib/src/tpmevents/: combine.rs  compute.rs  tests.rs  tree.rs
lib/src/tpmevents/combine/: tests.rs
lib/src/tpmevents/tree/: tests.rs
lib/src/uefi/: efivars.rs  secureboot.rs
src/: certs.rs  esp.rs  main.rs  pefile.rs  shim.rs  uefi.rs
src/uefi/: efivars.rs  secureboot.rs
test-fixtures/: README.md
test-fixtures/azure/20251013/fedora-42.20250705.3.0/: all-pcrs.json  pcr4.json  pcr7-sb-enabled.json
test-fixtures/fedora-42.20250705.3.0/: pcr14.json  pcr7-sb-disabled.json
test-fixtures/qemu-ovmf/fedora-42/fedora-42.20250705.3.0/: pcr4.json  pcr7-sb-enabled.json
test-fixtures/qemu-ovmf/fedora-42/rhel-9.6.20250523-0/: eventlog-rhcos-9.6.20250523-0-sb-disabled.json  pcr14.json  pcr4.json  pcr7-sb-enabled.json
test-fixtures/quay.io_fedora_fedora-coreos_42.20250705.3.0/: all-pcrs.json  pcr4.json
test-fixtures/rhel-9.6.20250523-0/: all-pcrs.json
