# SPDX-FileCopyrightText: Timothée Ravier <tim@siosm.fr>
# SPDX-FileCopyrightText: Beñat Gartzia Arruabarrena <bgartzia@redhat.com>
#
# SPDX-License-Identifier: CC0-1.0

[package]
description = "compute-pcrs command line interface"
name = "compute-pcrs"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/confidential-clusters/compute-pcrs"
rust-version = "1.85.0"
default-run = "compute-pcrs"

[dependencies]
compute-pcrs-lib = { version = "*", path = "../lib" }
anyhow = "1.0.99"
clap = { version = "4.5.46", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
