# SPDX-FileCopyrightText: Timothée Ravier <tim@siosm.fr>
# SPDX-FileCopyrightText: Beñat Gartzia Arruabarrena <bgartzia@redhat.com>
#
# SPDX-License-Identifier: CC0-1.0

[package]
description = "compute-pcrs library"
name = "compute-pcrs-lib"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/confidential-clusters/compute-pcrs"
rust-version = "1.85.0"

[dependencies]
lief = "0.17.0"
anyhow = "1.0.99"
hex = "0.4.3"
hex-literal = "1.0.0"
sha2 = "0.10.9"
serde = { version = "1.0.225", features = ["derive"] }
uuid = "1.18.1"
openssl = "0.10.73"
glob = "0.3.3"
